# jabroni

./: Cargo.toml  Justfile  README.md  dist-workspace.toml  flake.nix  test.ts
.github/workflows/: ci-nix.yml
src/: main.rs
test/: base.ts  deno.json  get.test.ts  insert.test.ts  jabroni.ts  list.test.ts  test.ts  wrapper.ts
test/__snapshots__/: get.test.ts.snap  insert.test.ts.snap  list.test.ts.snap
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  main.tsx  react-devtools.tsx  schema.tsx  websocket.tsx
