[package]
name = "jabroni"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A web socket server"
repository = "https://github.com/frectonz/jabroni"
keywords = ["websockets"]
categories = ["server"]

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
color-eyre = "0.6.3"
futures = "0.3.31"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.25.0", features = ["bundled"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tower = { version = "0.5.1", features = ["limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
